--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           </picture>
           <div class="testimonial-user-info">
             <h2 class="testimonial-name">
-              Daniel Clifford
+              Daniel Clifford 
               <p class="testimonial-role">Verified Graduate</p>
             </h2>
           </div>
@@ -37,7 +37,7 @@
           </picture>
           <div class="testimonial-user-info">
             <h2 class="testimonial-name">
-              Jonathan Walters
+              Jonathan Walters 
               <span class="testimonial-role">Verified Graduate</span>
             </h2>
           </div>
@@ -57,7 +57,7 @@
           </picture>
           <div class="testimonial-user-info">
             <h2 class="testimonial-name">
-              Jeanette Harmon
+              Jeanette Harmon 
               <span class="testimonial-role">Verified Graduate</span>
             </h2>
           </div>
@@ -77,7 +77,7 @@
           </picture>
           <div class="testimonial-user-info">
             <h2 class="testimonial-name">
-              Patrick Abrams
+              Patrick Abrams 
               <span class="testimonial-role">Verified Graduate</span>
             </h2>
           </div>
@@ -103,7 +103,7 @@
           </div>
         </div>
         <h1 class="testimonial-title">
-          Such a life-changing experience. Highly recommended!
+          Such a life-changing experience. <br>Highly recommended!
         </h1>
         <p class="testimonial-message">
           “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a former student of theirs who can only say wonderful things about the program. The entire curriculum and staff did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, I’ve often referred to it during interviews as an example of my development experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 100% recommend! ”
